[Java] Add module opens for reflective access to avoid warnings.