@@ -149,12 +149,17 @@ subprojects {
     }
 
     test {
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
+            jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
+        }
+
         testLogging {
             showStandardStreams = true
             exceptionFormat = 'full'
         }
     }
-
+    
     javadoc {
         title = '<h1>Agrona</h1>'
         options.bottom = '<i>Copyright &#169; 2014-2019 Real Logic Ltd. All Rights Reserved.</i>'
